# esmacat_knee_comments

./: CMakeLists.txt  README.md
ROS/: CMakeLists.txt  package.xml
ROS/ethercat_arduino_shield_by_esmacat_ROS/include/: ros_ethercat_arduino_shield_by_esmacat.cpp  ros_ethercat_arduino_shield_by_esmacat.h
ROS/ethercat_arduino_shield_by_esmacat_ROS/msg/: ease_registers.msg
ROS/ros_esmacat_applications/: CMakeLists.txt
ROS/ros_esmacat_applications/project_examples/: CMakeLists.txt
ROS/ros_esmacat_applications/project_examples/2_ease_ros/: CMakeLists.txt  esmacat_main.cpp  my_app.cpp  my_app.h
ROS/ros_esmacat_applications/project_examples/2_ease_ros/launch/: 2_ease_blink_master_c.launch  2_ease_blink_master_s.launch
ROS/ros_esmacat_applications/project_examples/ease_led_blink_ros/: CMakeLists.txt  my_app.cpp  my_app.h  ros_helper.cpp
ROS/ros_esmacat_applications/project_examples/ease_led_blink_ros/launch/: ease_led_blink_master_c.launch  ease_led_blink_master_s.launch
SOEM/: CMakeLists.txt
doc/: Doxyfile
doc/html/: CMakeLists_8txt.html  README_8md.html  analog__input_8cpp.html  analog__input_8h.html  analog__input_8h_source.html  annotated.html  application_8cpp.html  application_8h.html  application_8h_source.html  base__module_8cpp.html  base__module_8h.html  base__module_8h_source.html  classes.html  classesmacat__analog__input__slave-members.html  classesmacat__analog__input__slave.html  classesmacat__application-members.html  classesmacat__application.html  classesmacat__base__module-members.html  classesmacat__base__module.html  classesmacat__el3102-members.html  classesmacat__el3102.html  classesmacat__ethercat__arduino__shield__by__esmacat-members.html  classesmacat__ethercat__arduino__shield__by__esmacat.html  classesmacat__loadcell__interface-members.html  classesmacat__loadcell__interface.html  classesmacat__master-members.html  classesmacat__master.html  (+145 more)
esmacat_applications/project_POLIMI/FES_Knee/: CMakeLists.txt  README.md  headers.h  headers_fes.h  loop_time_stats.cpp  main_fes.cpp  sensojoint_fes_app.cpp  sensojoint_fes_app.h  sensojoint_fes_manager.cpp  sensojoint_fes_manager.h  stimulation.cpp  stimulation.h  time_spec_operation.h
esmacat_applications/project_POLIMI/FES_Knee/sensojoint_master/: README.md  application.h  display_main.cpp  esmacat_main.cpp  sensojoint.cpp  sensojoint.h  sensojoint_control.cpp  sensojoint_control.h  sensojoint_interface.h  sensojoint_manager.cpp  sensojoint_manager.h  sensojoint_shared_memory.cpp  sensojoint_shared_memory.h  sensojoint_structs.h
esmacat_applications/project_POLIMI/FES_Knee/stimulator_libraries/resource/file_handling/include/: csv_handling.h  read_file_exception_handling.h
esmacat_applications/project_POLIMI/FES_Knee/stimulator_libraries/resource/file_handling/src/: json_handling.cpp
esmacat_applications/project_POLIMI/FES_Knee/stimulator_libraries/resource/plog/: Log.h  Logger.h
esmacat_applications/project_POLIMI/Trajectory_Planning/: CMakeLists.txt  CMakeLists.txt.user.21  README.md  Traj Gen  trajectory_generation.cpp  trajectory_generation_main.cpp
esmacat_applications/project_POLIMI/Trajectory_Planning/sensojoint_master/: CMakeLists.txt  CMakeLists.txt.user.21  Offline_indexes_parameter.csv  display_main.cpp  esmacat_main.cpp  interface_main.cpp  sensojoint.cpp  sensojoint_adaptive.cpp  sensojoint_adaptive.h  sensojoint_control.cpp  sensojoint_control.h  sensojoint_interface.cpp  sensojoint_interface.h  sensojoint_manager.cpp  sensojoint_manager.h  sensojoint_shared_memory.cpp  sensojoint_shared_memory.h  sensojoint_structs.h
esmacat_applications/project_POLIMI/sensojoint_master/: CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.4.8-pre1  PROVACiao.cpp  PROVAH.h  PROVAH2.h  Rep_data.csv  headers_fes.h  interface_main.cpp  main_fes.cpp  main_fes.h  sensojoint.h  sensojoint_control.cpp  sensojoint_control.h  sensojoint_fes_app.cpp  sensojoint_fes_app.h  sensojoint_fes_manager.cpp  sensojoint_fes_manager.h  sensojoint_interface.cpp  sensojoint_manager.cpp  sensojoint_manager.h  sensojoint_shared_memory.h  sensojoint_structs.h  sensojoint_trajectory_generation.cpp  sensojoint_trajectory_generation.h  stimulation.cpp  stimulation.h  trajectory_generation.cpp  trajectory_generation.h
esmacat_applications/project_POLIMI/sensojoint_master/stimulator_libraries/resource/file_handling/include/: json_handling.h
esmacat_applications/project_POLIMI/sensojoint_master/stimulator_libraries/resource/file_handling/src/: read_file_exception_handling.cpp
esmacat_applications/project_examples/: CMakeLists.txt
esmacat_applications/project_examples/analog_input/: my_app.cpp  my_app.h
esmacat_applications/project_examples/arduino_shield/: CMakeLists.txt  esmacat_main.cpp  my_app.cpp  my_app.h
esmacat_applications/project_examples/demo_kit/: my_app.cpp  my_app.h
esmacat_applications/project_examples/demo_kit_mini_torque/: my_app.cpp  my_app.h  run.sh
esmacat_applications/project_examples/digital_io/: esmacat_main.cpp  my_app.cpp  my_app.h
esmacat_applications/project_examples/led_on/: my_app.cpp  my_app.h
esmacat_applications/project_examples/loadcell_interface/: my_app.cpp  my_app.h
esmacat_applications/project_examples/mini_torque_driver/: CMakeLists (copy).txt  CMakeLists.txt  display.cpp  onedof_app.cpp  onedof_app.h  onedof_logger.cpp  onedof_logger.h  onedof_main.cpp  shared_memory_comm.cpp  shared_memory_comm.h  user_input.cpp
esmacat_applications/project_examples/mini_torque_driver/configuration/onedof_config_files/: actuator_series200.json  actuator_series200_SN24.json  actuator_series200_original.json  actuator_series300.json
esmacat_applications/project_examples/motor_control_w_potentiometer/: my_app.cpp  my_app.h
esmacat_applications/project_examples/motor_driver/: my_app.cpp  my_app.h
esmacat_applications/project_examples/motor_position_control/: CMakeLists.txt  my_app.cpp  my_app.h
esmacat_applications/project_examples/sales_kit/: my_app.cpp  my_app.h
esmacat_core/application/: CMakeLists.txt  ecat_main.cpp
esmacat_slave_drivers/: CMakeLists.txt
(+284 files in other folders)
