<?xml version="1.0"?>
<package format="2">
  <name>esmacat_high_performance</name>
  <version>0.0.0</version>
  <description>The Esmacat high performance master package for ROS</description>

  <!-- Maintainer -->
  <maintainer email="manu@harmonicbionics.com">manuaatitya</maintainer>

  <!-- License -->
  <license>GPLv3</license>

  <url type="repo">https://bitbucket.org/harmonicbionics/esmacat_master_ros/</url>
  <url type="website">http://harmonicbionics.com/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
